2006-05-09  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* test/files/: New subdirectory to contain test data files.

	* test/Makefile.am: Update TESTDATADIR accordingly.

	* test/*: Ditto.

2006-05-08  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* configure.in, configure, src/config.h.in: Update to include
	#define's for OBERROR, OBFPTR, and OBCOMMON as below.

	* scripts/*: Regenerate using SWIG.

	* test/wrapper.sh: Update to include export for BABEL_DATADIR.

	* test/*: Add many new unit test frameworks (atom, mol, bond,
	conversion, format, etc.)

2006-05-08 Chris Morley <ob@gaseq.co.uk>

	* src/formats/xml/cmlformat.cpp(WriteMolecule): since the id
	must start with letter, add "id" if it doesn't and write a <name>
	element.
	
	* src/generic.h: add virtual GetValue function for OBGenericData
	and also definitions in OBComment and OBPairData. Hopefully will
	solve bug 1483112.
	
	* src/oberror.h: Add default define for OBERROR as nothing
	 
2006-05-07 Chris Morley <ob@gaseq.co.uk>

	* oberror.h: Change classes from OBAPI to new OBERROR
	so that can be compiled separately.
	
	* src/mol.h, src/bitvec.cpp, oberror.cpp, obconversion.cpp:
	change to OBERROR extern OBMessageHandler obErrorLog;
	
	* src/obconversion.h: add #include "oberror.h";
	
	* src/obconversion.cpp: now that oberror can be accessed everywhere
	change all cerr messages to use obErrorLog.
	
	* src/fingerprint.h: replace OBAPI by OBFPTR to allow fingerprint
	code to be separately compiled.
	
	* src/formats/xml.h: add OBCOMMON so that XML classes can be
	separately compiled. Add implementation of SkipObjects for
	XMLBaseFormat and XMLConversion::SkipXML.
	
	* src/formats/obmolecformat.cpp: Add ReadNameIndex to speed access
	in files with many molecules. I wasn't going to commit this until
	it was tested a bit more, but I must have misunderstood what
	Tortoise SVN was doing.
	
	* src/GUI/OBGUI.cpp: don't crash if there are no formats.  
