@@ -1,0 +1,269 @@
+C8H6N2O2 162.145 162.043
+C11H10N2O 186.21 186.079
+C7H12N2O 140.183 140.095
+C15H12N2O4S 316.332 316.052
+C14H9ClN2O4S 336.75 335.997
+C15H12N2O5S 332.331 332.047
+C4H8N2O2 116.119 116.059
+C14H10N2O4S 302.305 302.036
+C7H11NO2 141.168 141.079
+C9H12N2O2 180.204 180.09
+C11H11ClN2O 222.671 222.056
+C11H12N2O 188.226 188.095
+C12H14N2O 202.252 202.111
+C12H14N2O2 218.252 218.106
+C12H11F3N2O 256.224 256.082
+C11H11ClN2O 222.671 222.056
+C12H14N2O2 218.252 218.106
+C15H10N2O3 266.252 266.069
+C16H12N2O3 280.278 280.085
+C15H9ClN2O3 300.697 300.03
+C15H11N3O3 281.266 281.08
+C12H13N3O 215.251 215.106
+C14H17N3O 243.304 243.137
+C7H15NOS2 193.33 193.06
+C16H12FN3 265.285 265.102
+C9H8N4 172.187 172.075
+C16H13N5O 291.307 291.112
+C11H11ClN2O3 254.67 254.046
+C9H6ClN3O2 223.608 223.007
+C12H11N3O3 245.234 245.08
+C7H16N2O3 176.214 176.116
+C12H17N3O3S 283.347 283.099
+C13H19ClN2O3 286.755 286.108
+C16H12N4O 276.293 276.101
+C7H5F6N3 245.125 245.039
+C7H5F6N3 245.125 245.039
+C7H5F6N3 245.125 245.039
+C7H5F6N3 245.125 245.039
+C12H15N3O2S 265.323 265.081
+C12H14N4O 230.258 230.109
+C14H7Cl2F6N3O 418.121 416.987
+C11H9F3N4O 270.211 270.073
+C11H9F3N4O 270.211 270.073
+C9H11F3N4O2 264.204 264.083
+C9H14N4O2 210.233 210.112
+C10H11N3OS 221.279 221.062
+C10H8F3N3OS 275.25 275.034
+C13H19N3O4 281.308 281.138
+C10H7NO3 189.16 189.035
+C15H13N3OS 283.348 283.078
+C14H16N4O2 272.302 272.127
+C11H10N2O2 202.209 202.074
+C13H19N3O4 281.308 281.138
+C16H10N2O3 278.262 278.069
+C22H14N2O3 354.358 354.1
+C11H8N2O 184.194 184.064
+C13H13N3O3 259.261 259.096
+C13H13N3O4 275.26 275.091
+C14H21N3O5 311.334 311.148
+C12H10ClN3O3 279.679 279.041
+C13H11N3O5 289.244 289.07
+C12H9F2N3O3 281.215 281.061
+C12H18N4O4 282.296 282.133
+C12H11N3O5S 309.298 309.042
+C19H21N3O2S 355.454 355.135
+C9H9NO4 195.172 195.053
+C14H21N3O5 311.334 311.148
+C7H15N3O3S 221.277 221.083
+C21H18N4O3 374.393 374.138
+C16H19ClN4O 318.801 318.125
+C15H19N3O2S 305.395 305.12
+C8H13N3O2 183.208 183.101
+C16H10Cl2N2O 317.169 316.017
+C10H17N3O2S 243.326 243.104
+C17H12Cl2N2O 331.196 330.033
+C12H11ClN2O 234.682 234.056
+C12H13N3O2 231.251 231.101
+C12H12ClN3O2 265.696 265.062
+C12H11Cl2N3O2 300.141 299.023
+C12H11F2N3O2 267.231 267.082
+C12H10ClN3O4 295.678 295.036
+C12H9Cl2N3O3 314.124 313.002
+C14H15N3O3 273.287 273.111
+C9H6N2O3 190.148 190.03
+C11H13N3O2S 251.305 251.073
+C10H16N4O3 240.259 240.122
+C13H13N3O3 259.261 259.096
+C13H13N3O4 275.26 275.091
+C14H13N3O 239.273 239.106
+C12H14N4O2 246.265 246.112
+C13H14ClN3O2 279.722 279.077
+C12H14N4O2 246.265 246.112
+C14H19N3O2S 293.385 293.12
+C9H10N2S 178.254 178.056
+C9H10N2S 178.254 178.056
+C13H13N3O3S 291.326 291.068
+C13H13N3O4 275.26 275.091
+C9H9N5O 203.201 203.081
+C12H14BrN3O2S 344.227 342.999
+C13H14N4O2S 290.341 290.084
+C12H14N4O4S 310.329 310.074
+C12H14FN3O2S 283.322 283.079
+C12H16N4O4S2 344.41 344.061
+C10H10BrNO2 256.096 254.989
+C18H18Cl2NO2 351.247 350.071
+C13H16N4S 260.358 260.11
+C12H16N6 244.288 244.136
+C12H15FN6 262.278 262.126
+C11H13NO2 191.226 191.095
+C10H11NO3 193.199 193.074
+C11H12FNO 193.217 193.09
+C8H11NO3 169.178 169.074
+C11H8O5S 252.243 252.009
+C17H18Cl2N3S 367.316 366.06
+C10H6F6N4 296.172 296.05
+C18H14ClN3O2S 371.841 371.05
+C10H9Cl2NO2 246.09 245.001
+C13H13N3O2S 275.326 275.073
+C9H8ClNO3 213.618 213.019
+C10H10ClNO2 211.645 211.04
+C11H10F3NO2 245.198 245.066
+C18H14ClNO5S 391.825 391.028
+C18H13BrCl2N2S 440.184 437.936
+C9H9ClN2O2 212.633 212.035
+C10H8F3NO4 263.17 263.041
+C15H14N2O3 270.283 270.1
+C16H20O4 276.328 276.136
+C6H12N2O2S2 208.302 208.034
+C22H26O4 354.439 354.183
+C8H15NO2 157.21 157.11
+C17H21NO2 271.354 271.157
+C8H16N2O2S2 236.355 236.065
+C20H24N2O2S2 388.547 388.128
+C20H25NO2 311.418 311.189
+C10H16N2O2 196.246 196.121
+C9H9N5 187.201 187.086
+C21H12ClF3N2O3 432.78 432.049
+C13H11Cl2N3O2 312.151 311.023
+C16H15F3N4O2S 384.376 384.087
+C15H14Cl2N4O2S 385.268 384.021
+C21H17F3N4O2S 446.445 446.102
+C15H14Cl2N4O2S 385.268 384.021
+C16H16Cl2N4O2S 399.295 398.037
+C16H10Cl3NO3 370.615 368.973
+C12H6Cl2INO2 393.992 392.882
+C13H10INO3 355.128 354.971
+C12H8IN3O4 385.114 384.956
+C8H9IN2O2 292.074 291.971
+C11H10N2O3S2 282.339 282.013
+C9H7BrN2OS2 303.199 301.918
+C10H7F3N2OS2 292.301 291.995
+C18H16N4OS 336.411 336.104
+C19H10ClF6NO4S 497.795 496.992
+C19H13ClF3NO4S 443.824 443.021
+C5H4O2S2 160.214 159.965
+C13H18N2O2 234.294 234.137
+C10H11BrO2 243.097 241.994
+C10H10BrNO2 256.096 254.989
+C8H12N2OS 184.259 184.067
+C18H13ClF3N3O2S 427.828 427.037
+C17H21N5O6 391.379 391.149
+C10H9ClF3N5 291.66 291.05
+C17H14ClNO3 315.751 315.066
+C11H10Br2Cl2O2 404.91 401.842
+C15H16Br2ClF3N2O2 508.556 505.922
+C15H17NO6S 339.364 339.078
+C16H9N3O3 291.261 291.064
+C19H15F3N2O3 376.329 376.103
+C20H20N2O5 368.383 368.137
+C10H7ClN2O3 238.627 238.015
+C13H10ClN3O 259.691 259.051
+C13H10BrN3O 304.142 303.001
+C13H10IN3O 351.142 350.987
+C26H24N2 364.482 364.194
+C5H5N4O 137.119 137.046
+C13H23NO5S 305.39 305.13
+C21H21FN2OS 368.468 368.136
+C10H7ClO3S 242.679 241.98
+C12H7Cl2N4O2 310.108 308.987
+C16H9F6N5 385.267 385.076
+C13H10ClNOS2 295.808 294.989
+C15H9N3O5 311.249 311.054
+C14H12N2O3S3 352.452 352.001
+C13H17NO4S 283.343 283.088
+C9H9ClN4O 224.647 224.046
+C9H10N4O 190.202 190.085
+C10H12N4O 204.228 204.101
+C13H13N3S 243.327 243.083
+C21H11ClF9N5 539.784 539.056
+C6H3ClN2O2S3 266.748 265.905
+C14H11ClN2O3S3 386.897 385.962
+C15H11ClO2 258.7 258.045
+C15H11ClO2 258.7 258.045
+C10H12ClF3N2S 284.729 284.036
+C22H20ClN5O 405.88 405.136
+C14H13Cl2NO 282.165 281.037
+C11H5Cl2F3N2O 309.071 307.973
+C10H5Cl2F3N2O2S 345.125 343.94
+C6H4N2OS2 184.239 183.977
+C14H18N2O3 262.304 262.132
+C8H6N2S2 194.277 193.997
+C18H14ClF3N2S2 414.895 414.024
+C16H7ClF6N2O3S 456.747 455.977
+C7H3F3N5 214.127 214.034
+C23H21N3O2 371.432 371.163
+C9H7Cl2NO5 280.062 278.97
+C18H16NO4P 341.298 341.082
+C19H15Cl2O4P 409.2 408.009
+C4H6O4S 150.153 149.999
+C11H7ClF3NO3S2 357.756 356.951
+C19H20ClNO2S2 393.951 393.062
+C20H20F3NO2S2 427.504 427.089
+C16H14ClNO4S 351.805 351.033
+C9H9Cl2NO3 250.079 248.996
+C7H10N2O4S2 250.287 250
+C10H12NO4PS 273.245 273.022
+C8H5ClF3NO 223.58 223.001
+C4H2ClNO2 131.517 130.977
+C6H6ClNO2 159.57 159.009
+C6H3ClF3NO2 213.542 212.98
+C5H4ClNO2 145.544 144.993
+C2H8NO3PS 157.129 156.996
+C3H9O6P 172.074 172.014
+C3H11NO7P2 235.069 235.001
+C17H12O4 280.275 280.074
+C6H13NO5 179.171 179.079
+C14H18O5 266.29 266.115
+C5H10O5 150.13 150.053
+C40H68O11 724.842 724.359
+C5H7NO3S 161.179 161.015
+C32H31ClN2O5S 591.117 590.164
+C27H30N2O6S 510.602 510.182
+C33H30N2O4S 550.667 550.193
+C5H11NO2 117.146 117.079
+C12H10O3S 234.271 234.035
+C8H16S2 176.343 176.069
+C13H9FOS 232.273 232.036
+C16H17NOS 271.377 271.103
+C11H9NOS 203.26 203.04
+C9H16S2 188.353 188.069
+C14H18O5 266.274 266.1
+C23H18N2O3 370.401 370.132
+C16H14N2O2S2 330.425 330.05
+C11H13NO3 207.226 207.09
+C39H59NO5 621.882 621.431
+C30H45NO2 451.676 451.337
+C15H19NO9S 389.338 389.039
+C24H31NO15S 605.494 605.071
+C8H5BrO3PSe 338.961 338.832
+C5H12N2O3PS 211.199 211.031
+C3H10N2O3PS 185.162 185.015
+C10H21BN2O3 228.096 228.165
+C7H17BN2O3 188.032 188.133
+C4H13BN2O 115.97 116.112
+C9H7Br2NO 304.966 302.889
+C4H4N2 80.088 80.0374
+C4H4N2 80.088 80.0374
+C5H8 68.117 68.0626
+C16H10O2 234.249 234.068
+C14H10O2 210.228 210.068
+C17H11NO 245.275 245.084
+C17H11NO 245.275 245.084
+C16H10O2 234.249 234.068
+C14H10O2 210.228 210.068
+C9H7O5P 226.123 226.003
+C15H22O2 234.318 234.146
+C9H6O2 146.143 146.037
+C17H11NO 245.275 245.084
+C14H16N2O2S 276.346 276.085
