@@ -3,7 +3,7 @@
 # Run "prove" on all Perl programs
 
 TESTS="aromatest.pl atom bond conversion data format"
-TESTS="${TESTS} internalcoord matrix mol residue rings"
+TESTS="${TESTS} formula internalcoord matrix mol residue rings"
 TESTS="${TESTS} smarts unitcell"
 TESTS="${TESTS} cml.sh test-set.sh"
 PROVE=prove
